...
            app:destination="@id/collectorListFragment" />
    </fragment>

    <fragment
        android:id="@+id/albumListFragment"
        android:name="com.misw.app.ui.albums.AlbumListFragment"
        android:label="Álbumes"
        tools:layout="@layout/fragment_album_list">
        <action
            android:id="@+id/action_albumsListFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
        <action
            android:id="@+id/action_albumsListFragment_to_albumCreateFragment"
...
            app:destination="@id/musicianDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/albumCreateFragment"
        android:name="com.misw.app.ui.albums.AlbumCreateFragment"
        android:label="Crear álbum"
        tools:layout="@layout/fragment_album_create">
    </fragment>

    <fragment
        android:id="@+id/musicianDetailFragment"
        android:name="com.misw.app.ui.musicians.MusicianDetailFragment"
...
