<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="20dp"
        android:minWidth="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:gravity="center"
        android:text="@string/album_create_button_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/pill_create_button"
        android:textAllCaps="false"/>
</FrameLayout>
