<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <include
        android:id="@+id/include_albums"
        layout="@layout/item_menu_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <include
            android:id="@+id/include_artists"
            layout="@layout/item_menu_small_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <include
            android:id="@+id/include_tracks"
            layout="@layout/item_menu_small_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            tools:ignore="DuplicateIncludedIds" />
    </LinearLayout>

    <include
        android:id="@+id/include_collectors"
        layout="@layout/item_menu_card" />

</LinearLayout>